--- a/vty.cabal
+++ b/vty.cabal
@@ -117,8 +117,6 @@ library
 
   hs-source-dirs:      src
 
-  default-extensions:  ScopedTypeVariables
-
   ghc-options:         -O2 -funbox-strict-fields -Wall -fspec-constr -fspec-constr-count=10
 
   ghc-prof-options:    -O2 -funbox-strict-fields -caf-all -Wall -fspec-constr -fspec-constr-count=10
@@ -143,7 +141,6 @@ executable vty-mode-demo
   hs-source-dirs:      demos
 
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
   ghc-options:         -threaded
 
   build-depends:       vty,
@@ -158,7 +155,6 @@ executable vty-demo
   hs-source-dirs:      demos
 
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
   ghc-options:         -threaded
 
   build-depends:       vty,
@@ -170,7 +166,6 @@ executable vty-demo
 
 test-suite verify-using-mock-terminal
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -203,7 +198,6 @@ test-suite verify-using-mock-terminal
 
 test-suite verify-terminal
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -236,7 +230,6 @@ test-suite verify-terminal
 
 test-suite verify-display-attributes
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -268,7 +261,6 @@ test-suite verify-display-attributes
 
 test-suite verify-empty-image-props
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -294,7 +286,6 @@ test-suite verify-empty-image-props
 
 test-suite verify-eval-terminfo-caps
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -323,7 +314,6 @@ test-suite verify-eval-terminfo-caps
 
 test-suite verify-image-ops
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -351,7 +341,6 @@ test-suite verify-image-ops
 
 test-suite verify-image-trans
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -379,7 +368,6 @@ test-suite verify-image-trans
 
 test-suite verify-inline
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -406,7 +394,6 @@ test-suite verify-inline
 
 test-suite verify-parse-terminfo-caps
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -435,7 +422,6 @@ test-suite verify-parse-terminfo-caps
 
 test-suite verify-simple-span-generation
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -467,7 +453,6 @@ test-suite verify-simple-span-generation
 
 test-suite verify-crop-span-generation
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -499,7 +484,6 @@ test-suite verify-crop-span-generation
 
 test-suite verify-layers-span-generation
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -530,7 +514,6 @@ test-suite verify-layers-span-generation
 
 test-suite verify-color-mapping
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -556,7 +539,6 @@ test-suite verify-color-mapping
 
 test-suite verify-utf8-width
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -582,13 +564,14 @@ test-suite verify-utf8-width
 
 test-suite verify-using-mock-input
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                exitcode-stdio-1.0
 
   hs-source-dirs:      test
 
   main-is:             VerifyUsingMockInput.hs
+
+  other-modules:       Verify.Graphics.Vty.Output
 
   build-depends:       vty,
                        Cabal >= 1.20,
@@ -616,7 +599,6 @@ test-suite verify-using-mock-input
 
 test-suite verify-config
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
 
   type:                exitcode-stdio-1.0
 
