--- a/vty.cabal
+++ b/vty.cabal
@@ -122,10 +122,10 @@ executable vty-build-width-table
   if !impl(ghc >= 8.0)
     build-depends:     semigroups >= 0.16
 
-  build-depends:       vty,
+  build-depends:       base,
+                       vty,
                        directory,
-                       filepath,
-                       base >= 4.8 && < 5
+                       filepath
 
 executable vty-mode-demo
   main-is:             ModeDemo.hs
@@ -134,12 +134,12 @@ executable vty-mode-demo
   default-language:    Haskell2010
   ghc-options:         -threaded
 
-  build-depends:       vty,
-                       base >= 4.8 && < 5,
+  build-depends:       base,
+                       vty,
                        containers,
                        microlens,
                        microlens-mtl,
-                       mtl >= 1.1.1.0 && < 2.3
+                       mtl
 
 executable vty-demo
   main-is:             Demo.hs
@@ -148,9 +148,9 @@ executable vty-demo
   default-language:    Haskell2010
   ghc-options:         -threaded
 
-  build-depends:       vty,
-                       base >= 4.8 && < 5,
+  build-depends:       base,
+                       vty,
                        containers,
                        microlens,
                        microlens-mtl,
-                       mtl >= 1.1.1.0 && < 2.3
+                       mtl
