--- a/vty.cabal
+++ b/vty.cabal
@@ -83,9 +83,7 @@ library
                        Graphics.Vty.UnicodeWidthTable.IO
                        Graphics.Vty.UnicodeWidthTable.Query
                        Graphics.Vty.UnicodeWidthTable.Install
-  c-sources:           cbits/gwinsz.c
-                       cbits/set_term_timing.c
-                       cbits/mk_wcwidth.c
+  c-sources:           cbits/mk_wcwidth.c
 
 -- executable vty-build-width-table
 --   main-is:             BuildWidthTable.hs
