--- a/vty.cabal
+++ b/vty.cabal
@@ -86,22 +86,9 @@ library
                        Graphics.Vty.UnicodeWidthTable.Types
                        Graphics.Vty.UnicodeWidthTable.IO
                        Graphics.Vty.UnicodeWidthTable.Query
+                       Graphics.Vty.UnicodeWidthTable.Main
                        Graphics.Vty.UnicodeWidthTable.Install
   c-sources:           cbits/mk_wcwidth.c
-
--- executable vty-build-width-table
---   main-is:             BuildWidthTable.hs
---   hs-source-dirs:      tools
---   default-language:    Haskell2010
---   ghc-options:         -threaded -Wall
--- 
---   if !impl(ghc >= 8.0)
---     build-depends:     semigroups >= 0.16
--- 
---   build-depends:       base,
---                        vty,
---                        directory,
---                        filepath
 
 -- executable vty-demo
 --   main-is:             Demo.hs
